fix: add spacing tweaks to .card class

--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -65,6 +65,12 @@
         margin-top: 1.15em;
       }
     }
+
+    @media (min-width: 1024px) {
+      & > * + * {
+        margin-top: 2em;
+      }
+    }
   }
   &__title {
     padding-inline: 0.5em;
